<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SimpleActivityTheme"
    android:background="@color/backgroundColor"
    tools:context="view.register.RegisterActivity">
    <include layout="@layout/simple_action_bar">
    </include>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/baseline_email"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_user"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/login"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_style"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_style"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />


</androidx.constraintlayout.widget.ConstraintLayout>