<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="view.login.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/login"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="5dp"
        android:id="@+id/edt_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/user"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/password"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="5dp"
        android:id="@+id/edt__login_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-medium"
        android:hint="Senha"
        android:inputType="textPassword"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"></com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_style"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_style"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:text="@string/text_create_acount_one"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear"></com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_create_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/text_btn_create_acount"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"></com.google.android.material.textview.MaterialTextView>


</androidx.constraintlayout.widget.ConstraintLayout>